spec/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: http-server
    version: 1.3.0
  sessionAffinity: None
  type: ClusterIP
